RS-601: Add infractl status commands to implement maintenance information (#733)
